macos/Runner/bridge_generated.h

/**
 * A 48-bit (6 byte) buffer containing the EUI address
 */
#define EUI48LEN 6
/**
 * A 64-bit (8 byte) buffer containing the EUI address
 */
#define EUI64LEN 8
#define X0 0
#define X1 1
#define X2 2
#define X3 3
#define X4 4
#define X5 5
#define X6 6
#define X7 7
#define X8 8
#define X9 9
#define X10 10
#define X11 11
#define X12 12
#define X13 13
#define X14 14
#define X15 15
#define X16 16
#define X17 17
#define X18 18
#define X19 19
#define X20 20
#define D20 2196
#define D21 2197
#define D22 2198
#define D23 2199
#define D24 2200
#define D25 2201
#define D26 2202
#define D27 2203
#define D28 2204
#define D29 2205
#define D30 2206
#define D31 2207
#define D32 2208
#define D33 2209
#define D34 2210
#define D35 2211
#define D36 2212
#define D37 2213
#define D38 2214
#define D39 2215
#define D40 2216
#define D41 2217
#define D42 2218
#define D43 2219
#define D44 2220
#define D45 2221
#define D46 2222
#define D47 2223
#define D48 2224
#define D49 2225
#define D50 2226
#define D51 2227
#define D52 2228
#define D53 2229
#define D54 2230
#define D55 2231
#define D56 2232
#define D57 2233
#define D58 2234
#define D59 2235
#define D60 2236
#define D61 2237
#define D62 2238
#define D63 2239
#define D64 2240
#define D65 2241
#define D66 2242
#define D67 2243
#define D68 2244
#define D69 2245
#define D70 2246
#define D71 2247
#define D72 2248
#define D73 2249
#define D74 2250
#define D75 2251
#define D76 2252
#define D77 2253
#define D78 2254
#define D79 2255
#define D80 2256
#define D81 2257
#define D82 2258
#define D83 2259
#define D84 2260
#define D85 2261
#define D86 2262
#define D87 2263
#define D88 2264
#define D89 2265
#define D90 2266
#define D91 2267
#define D92 2268
#define D93 2269
#define D94 2270
#define D95 2271
#define D96 2272
#define D97 2273
#define D98 2274
typedef struct DartCObject DartCObject;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_uint_16_list {
  uint16_t *ptr;
  int32_t len;
} wire_uint_16_list;
typedef struct wire_LogicControl {
  uint8_t index;
  uint8_t scene;
  struct wire_uint_8_list *values;
} wire_LogicControl;
typedef struct DartCObject *WireSyncReturn;
void wire_hal_generate_set_coils(int64_t port_,
                                 uint8_t unit_id,
                                 uint16_t reg,
                                 struct wire_uint_8_list *values);
void wire_hal_generate_set_coil(int64_t port_, uint8_t unit_id, uint16_t reg, uint8_t value);
void wire_hal_generate_set_holding(int64_t port_, uint8_t unit_id, uint16_t reg, uint16_t value);
void wire_hal_generate_set_holdings_bulk(int64_t port_,
                                         uint8_t unit_id,
                                         uint16_t reg,
                                         struct wire_uint_16_list *values);
void wire_hex_encode(int64_t port_, struct wire_uint_8_list *data);
void wire_hex_decode(int64_t port_, struct wire_uint_8_list *data);
void wire_hal_new_logic_control(int64_t port_,
                                uint8_t index,
                                uint8_t scene,
                                struct wire_uint_8_list *values);
void wire_hal_generate_set_lc_holdings(int64_t port_,
                                       uint8_t unit_id,
                                       struct wire_LogicControl *logic_control);
void wire_convert_u16s_to_u8s(int64_t port_, struct wire_uint_16_list *data);
void wire_hal_read_device_settings(int64_t port_, uint8_t index);
struct wire_LogicControl *new_box_autoadd_logic_control_0(void);
struct wire_uint_16_list *new_uint_16_list_0(int32_t len);
struct wire_uint_8_list *new_uint_8_list_0(int32_t len);
void free_WireSyncReturn(WireSyncReturn ptr);