lib/bridge_generated.io.dart


  late final _wire_hal_generate_set_coilsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Uint8, ffi.Uint16,
              ffi.Pointer<wire_uint_8_list>)>>('wire_hal_generate_set_coils');
  late final _wire_hal_generate_set_coils =
      _wire_hal_generate_set_coilsPtr.asFunction<
          void Function(int, int, int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_hal_generate_set_coil(
    int port_,
    int unit_id,
    int reg,
    int value,
  ) {
    return _wire_hal_generate_set_coil(
      port_,
      unit_id,
      reg,
      value,
    );
  }

  late final _wire_hal_generate_set_coilPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Uint8, ffi.Uint16,
              ffi.Uint8)>>('wire_hal_generate_set_coil');
  late final _wire_hal_generate_set_coil = _wire_hal_generate_set_coilPtr
      .asFunction<void Function(int, int, int, int)>();

  void wire_hal_generate_set_holding(
    int port_,
    int unit_id,
    int reg,
    int value,
  ) {
    return _wire_hal_generate_set_holding(
      port_,
      unit_id,
      reg,
      value,
    );
  }

  late final _wire_hal_generate_set_holdingPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Uint8, ffi.Uint16,
              ffi.Uint16)>>('wire_hal_generate_set_holding');
  late final _wire_hal_generate_set_holding = _wire_hal_generate_set_holdingPtr
      .asFunction<void Function(int, int, int, int)>();

  void wire_hal_generate_set_holdings_bulk(
    int port_,
    int unit_id,
    int reg,
    ffi.Pointer<wire_uint_16_list> values,
  ) {
    return _wire_hal_generate_set_holdings_bulk(
      port_,
      unit_id,
      reg,
      values,
    );
  }

  late final _wire_hal_generate_set_holdings_bulkPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Uint8, ffi.Uint16,
                  ffi.Pointer<wire_uint_16_list>)>>(
      'wire_hal_generate_set_holdings_bulk');
  late final _wire_hal_generate_set_holdings_bulk =
      _wire_hal_generate_set_holdings_bulkPtr.asFunction<
          void Function(int, int, int, ffi.Pointer<wire_uint_16_list>)>();

  void wire_hex_encode(
    int port_,
    ffi.Pointer<wire_uint_8_list> data,
  ) {
    return _wire_hex_encode(
      port_,
      data,
    );
  }

  late final _wire_hex_encodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>('wire_hex_encode');
  late final _wire_hex_encode = _wire_hex_encodePtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_hex_decode(
    int port_,
    ffi.Pointer<wire_uint_8_list> data,
  ) {
    return _wire_hex_decode(
      port_,
      data,
    );
  }

  late final _wire_hex_decodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>('wire_hex_decode');
  late final _wire_hex_decode = _wire_hex_decodePtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_hal_new_logic_control(
    int port_,
    int index,
    int scene,
    ffi.Pointer<wire_uint_8_list> values,
  ) {
    return _wire_hal_new_logic_control(
      port_,
      index,
      scene,
      values,
    );
  }

  late final _wire_hal_new_logic_controlPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Uint8, ffi.Uint8,
              ffi.Pointer<wire_uint_8_list>)>>('wire_hal_new_logic_control');
  late final _wire_hal_new_logic_control =
      _wire_hal_new_logic_controlPtr.asFunction<
          void Function(int, int, int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_hal_generate_set_lc_holdings(
    int port_,
    int unit_id,
    ffi.Pointer<wire_LogicControl> logic_control,
  ) {
    return _wire_hal_generate_set_lc_holdings(
      port_,
      unit_id,
      logic_control,
    );
  }

  late final _wire_hal_generate_set_lc_holdingsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Int64, ffi.Uint8, ffi.Pointer<wire_LogicControl>)>>(
      'wire_hal_generate_set_lc_holdings');
  late final _wire_hal_generate_set_lc_holdings =
      _wire_hal_generate_set_lc_holdingsPtr.asFunction<
          void Function(int, int, ffi.Pointer<wire_LogicControl>)>();

  void wire_convert_u16s_to_u8s(
    int port_,
    ffi.Pointer<wire_uint_16_list> data,
  ) {
    return _wire_convert_u16s_to_u8s(
      port_,
      data,
    );
  }

  late final _wire_convert_u16s_to_u8sPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64,
              ffi.Pointer<wire_uint_16_list>)>>('wire_convert_u16s_to_u8s');
  late final _wire_convert_u16s_to_u8s = _wire_convert_u16s_to_u8sPtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_16_list>)>();

  void wire_hal_read_device_settings(
    int port_,
    int index,
  ) {
    return _wire_hal_read_device_settings(
      port_,
      index,
    );
  }

  late final _wire_hal_read_device_settingsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Uint8)>>(
          'wire_hal_read_device_settings');
  late final _wire_hal_read_device_settings =
      _wire_hal_read_device_settingsPtr.asFunction<void Function(int, int)>();

  ffi.Pointer<wire_LogicControl> new_box_autoadd_logic_control_0() {
    return _new_box_autoadd_logic_control_0();
  }

  late final _new_box_autoadd_logic_control_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_LogicControl> Function()>>(
          'new_box_autoadd_logic_control_0');
  late final _new_box_autoadd_logic_control_0 =
      _new_box_autoadd_logic_control_0Ptr
          .asFunction<ffi.Pointer<wire_LogicControl> Function()>();

  ffi.Pointer<wire_uint_16_list> new_uint_16_list_0(
    int len,
  ) {
    return _new_uint_16_list_0(
      len,
    );
  }

  late final _new_uint_16_list_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_uint_16_list> Function(
              ffi.Int32)>>('new_uint_16_list_0');
  late final _new_uint_16_list_0 = _new_uint_16_list_0Ptr
      .asFunction<ffi.Pointer<wire_uint_16_list> Function(int)>();

  ffi.Pointer<wire_uint_8_list> new_uint_8_list_0(
    int len,
  ) {
    return _new_uint_8_list_0(
      len,
    );
  }

  late final _new_uint_8_list_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_uint_8_list> Function(
              ffi.Int32)>>('new_uint_8_list_0');
  late final _new_uint_8_list_0 = _new_uint_8_list_0Ptr
      .asFunction<ffi.Pointer<wire_uint_8_list> Function(int)>();

  void free_WireSyncReturn(
    WireSyncReturn ptr,
  ) {
    return _free_WireSyncReturn(
      ptr,
    );
  }

  late final _free_WireSyncReturnPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturn)>>(
          'free_WireSyncReturn');
  late final _free_WireSyncReturn =
      _free_WireSyncReturnPtr.asFunction<void Function(WireSyncReturn)>();
}

class _Dart_Handle extends ffi.Opaque {}

class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

class wire_uint_16_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint16> ptr;

  @ffi.Int32()
  external int len;
}

class wire_LogicControl extends ffi.Struct {
  @ffi.Uint8()
  external int index;

  @ffi.Uint8()
  external int scene;

  external ffi.Pointer<wire_uint_8_list> values;
}

typedef DartPostCObjectFnType = ffi.Pointer<
    ffi.NativeFunction<
        ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message)>>;
typedef DartPort = ffi.Int64;

const int EUI48LEN = 6;

const int EUI64LEN = 8;

const int X0 = 0;

const int X1 = 1;

const int X2 = 2;

const int X3 = 3;

const int X4 = 4;

const int X5 = 5;

const int X6 = 6;

const int X7 = 7;

const int X8 = 8;

const int X9 = 9;

const int X10 = 10;

const int X11 = 11;

const int X12 = 12;

const int X13 = 13;

const int X14 = 14;

const int X15 = 15;

const int X16 = 16;

const int X17 = 17;

const int X18 = 18;

const int X19 = 19;

const int X20 = 20;

const int D20 = 2196;

const int D21 = 2197;

const int D22 = 2198;

const int D23 = 2199;

const int D24 = 2200;

const int D25 = 2201;

const int D26 = 2202;

const int D27 = 2203;

const int D28 = 2204;

const int D29 = 2205;

const int D30 = 2206;

const int D31 = 2207;

const int D32 = 2208;

const int D33 = 2209;

const int D34 = 2210;

const int D35 = 2211;

const int D36 = 2212;

const int D37 = 2213;

const int D38 = 2214;

const int D39 = 2215;

const int D40 = 2216;

const int D41 = 2217;

const int D42 = 2218;

const int D43 = 2219;

const int D44 = 2220;

const int D45 = 2221;

const int D46 = 2222;

const int D47 = 2223;

const int D48 = 2224;

const int D49 = 2225;

const int D50 = 2226;

const int D51 = 2227;

const int D52 = 2228;

const int D53 = 2229;

const int D54 = 2230;

const int D55 = 2231;

const int D56 = 2232;

const int D57 = 2233;

const int D58 = 2234;

const int D59 = 2235;

const int D60 = 2236;

const int D61 = 2237;

const int D62 = 2238;

const int D63 = 2239;

const int D64 = 2240;

const int D65 = 2241;

const int D66 = 2242;

const int D67 = 2243;

const int D68 = 2244;

const int D69 = 2245;

const int D70 = 2246;

const int D71 = 2247;

const int D72 = 2248;

const int D73 = 2249;

const int D74 = 2250;

const int D75 = 2251;

const int D76 = 2252;

const int D77 = 2253;

const int D78 = 2254;

const int D79 = 2255;

const int D80 = 2256;

const int D81 = 2257;

const int D82 = 2258;

const int D83 = 2259;

const int D84 = 2260;

const int D85 = 2261;

const int D86 = 2262;

const int D87 = 2263;

const int D88 = 2264;

const int D89 = 2265;

const int D90 = 2266;

const int D91 = 2267;

const int D92 = 2268;

const int D93 = 2269;

const int D94 = 2270;

const int D95 = 2271;

const int D96 = 2272;

const int D97 = 2273;

const int D98 = 2274;
